# libwave

./: .ccls  .clang-format  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  wscript
app/diff-wave/: CMakeLists.txt  diff-wave.c  wscript
app/diff-wave/src/: diff-wave.c
cmake/: wavConfig.cmake.in  waveConfig.cmake.in
cmake/Modules/: wavTargetProperties.cmake  waveTargetProperties.cmake
diff-wav/: CMakeLists.txt
diff-wav/src/: diff-wav.c
include/: wav.h  wav_defs.h  wave.h  wave_defs.h
src/: .wave.c.swp  wav.c  wav_priv.h  wave.c  wave_priv.h  wscript
tests/write_f32/: CMakeLists.txt  main.c
